<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.quinnipiac.ser210.myapplication.AllWorkoutsFragment">

    <TextView
        android:id="@+id/muscleTextView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="Muscle: "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muscleTextView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FABSavedWorkoutsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Workout"
        android:textSize="20dp"
        app:icon="@drawable/fabsavedicon"
        app:layout_constraintBottom_toTopOf="@id/FABback"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="8dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FABback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:icon="@drawable/fabbackicon"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
