...
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savedWorkouts"
        app:layout_constraintBottom_toBottomOf="parent"/>
...
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/savedBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7B6CFA"
        app:icon="@drawable/fabbackicon"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
